// Copyright 2020 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.internal.duchy;

import "wfa/measurement/internal/duchy/computation_protocols.proto";

option java_package = "org.wfanet.measurement.internal.duchy";
option java_multiple_files = true;

// Service for persisting computation related measurements.
service ComputationStats {
  // Persists a ComputationStat.
  rpc CreateComputationStat(CreateComputationStatRequest)
      returns (CreateComputationStatResponse) {}
}

// Request to create a new computation stat.
message CreateComputationStatRequest {
  // Identifier for the computation used locally.
  int64 local_computation_id = 1;
  // The stage of the computation.
  ComputationStage computation_stage = 2;
  // The number of the current attempt of the stage.
  int32 attempt = 3;
  // Name of the metric that is being measured e.g. crypto_cpu_time_millis.
  string metric_name = 4;
  // Numerical value of the measurement.
  int64 metric_value = 5;
}

message CreateComputationStatResponse {
  // Deliberately empty
}
